Add content to cards

--- a/src/framework/_variables.scss
+++ b/src/framework/_variables.scss
@@ -5,5 +5,7 @@ $grey: #333333;
 $lightGrey: #f7f7f7;
 $white: #FFFFFF;
 $brown: #563d16;
+$darkBrown: #161616;
 $darkYellow: #0c0c0a;
+$yellow: #F2A41E;
 $transparent: rgba(0,0,0,0);
