--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,373 @@
-nav{display:flex;align-items:flex-end;justify-content:flex-start;background:linear-gradient(#563d16, #19213e);height:0;opacity:0;padding:20px}@media screen and (min-width: 768px){nav{height:70px;background:none;opacity:1;justify-content:flex-end}}nav ul{margin:0;padding:0;margin-bottom:-150px}@media screen and (min-width: 768px){nav ul{margin-bottom:0}}nav ul li{padding:0;opacity:0;list-style:none;text-align:left;margin-bottom:-30px;font-size:1.3rem}@media screen and (min-width: 768px){nav ul li{opacity:1;display:inline-block;margin:0 1rem;font-size:1rem}}nav ul li a{color:#fff;text-decoration:none}nav ul li a:focus{outline:1px dashed #fff;outline-offset:3px}.nav__open{opacity:0.9;height:100vh;transition:opacity 0.3s cubic-bezier(0.93, 0.24, 0.98, 0.85);position:absolute;left:0;right:0;z-index:3}.nav__open ul{margin-bottom:0;transition:all 0.2s ease}.nav__open li{opacity:1;margin-bottom:1rem;transition:margin-bottom 0.5s ease}.nav__open li:nth-child(1){transition-delay:0.1s}.nav__open li:nth-child(2){transition-delay:0.2s}.nav__open li:nth-child(3){transition-delay:0.3s}.mobNav{position:absolute;right:30px;top:0;height:20px;width:30px;padding:20px;z-index:3}@media screen and (min-width: 768px){.mobNav{display:none}}.mobNav__open *{transition:all 0.2s ease-in}.mobNav__open span:nth-child(1){transform:rotate(-45deg);margin-top:10px}.mobNav__open span:nth-child(2){opacity:0}.mobNav__open span:nth-child(3){transform:rotate(45deg);margin-top:-14px}.mobNav__elem{background-color:#F2A41E;width:30px;height:2px;display:block;margin-bottom:5px;transition:all 0.2s ease-in}.mobNav__elem:nth-child(1),.mobNav__elem:nth-child(3){transform:rotate(0)}.mobNav__elem:nth-child(2){opacity:1}
+nav {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  background: linear-gradient(#563d16, #19213e);
+  height: 0;
+  opacity: 0;
+  padding: 20px;
+}
+@media screen and (min-width: 768px) {
+nav {
+      height: 70px;
+      background: none;
+      opacity: 1;
+      justify-content: flex-end;
+}
+}
+nav ul {
+    margin: 0;
+    padding: 0;
+    margin-bottom: -150px;
+}
+@media screen and (min-width: 768px) {
+nav ul {
+        margin-bottom: 0;
+}
+}
+nav ul li {
+      padding: 0;
+      opacity: 0;
+      list-style: none;
+      text-align: left;
+      margin-bottom: -30px;
+      font-size: 1.3rem;
+}
+@media screen and (min-width: 768px) {
+nav ul li {
+          opacity: 1;
+          display: inline-block;
+          margin: 0 1rem;
+          font-size: 1rem;
+}
+}
+nav ul li a {
+        color: #FFFFFF;
+        text-decoration: none;
+}
+nav ul li a:focus {
+          outline: 1px dashed #FFFFFF;
+          outline-offset: 3px;
+}
+.nav__open {
+  opacity: 0.9;
+  height: 100vh;
+  transition: opacity 0.3s cubic-bezier(0.93, 0.24, 0.98, 0.85);
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 3;
+}
+.nav__open ul {
+    margin-bottom: 0;
+    transition: all 0.2s ease;
+}
+.nav__open li {
+    opacity: 1;
+    margin-bottom: 1rem;
+    transition: margin-bottom 0.5s ease;
+}
+.nav__open li:nth-child(1) {
+      transition-delay: 0.1s;
+}
+.nav__open li:nth-child(2) {
+      transition-delay: 0.2s;
+}
+.nav__open li:nth-child(3) {
+      transition-delay: 0.3s;
+}
+.mobNav {
+  position: absolute;
+  right: 30px;
+  top: 0;
+  height: 20px;
+  width: 30px;
+  padding: 20px;
+  z-index: 3;
+}
+@media screen and (min-width: 768px) {
+.mobNav {
+      display: none;
+}
+}
+.mobNav__open * {
+    transition: all 0.2s ease-in;
+}
+.mobNav__open span:nth-child(1) {
+    transform: rotate(-45deg);
+    margin-top: 10px;
+}
+.mobNav__open span:nth-child(2) {
+    opacity: 0;
+}
+.mobNav__open span:nth-child(3) {
+    transform: rotate(45deg);
+    margin-top: -14px;
+}
+.mobNav__elem {
+    background-color: #F2A41E;
+    width: 30px;
+    height: 2px;
+    display: block;
+    margin-bottom: 5px;
+    transition: all 0.2s ease-in;
+}
+.mobNav__elem:nth-child(1), .mobNav__elem:nth-child(3) {
+      transform: rotate(0);
+}
+.mobNav__elem:nth-child(2) {
+      opacity: 1;
+}
 
-.card{height:100%;width:100%;max-width:400px;margin:auto;border-radius:5px;margin-top:0;position:relative;transition:all 0.5s ease}@media screen and (min-width: 768px){.card{margin:0;max-width:800px}}.card::before{content:'';display:block;position:absolute;height:150px;width:5px;background-color:#F2A41E;top:-170px;left:52px}.card--focused{display:block}.card--unfocused{margin-top:50px}.card__image{width:70px;height:70px;overflow:hidden;border-radius:50%;display:flex;align-items:flex-start;justify-content:center;position:absolute;left:20px;top:-30px;border:5px solid #fff;z-index:2}.card__image img{width:80px}.card__title{padding:50px 20px 20px 20px;color:#fff;border-top-left-radius:5px;border-top-right-radius:5px;background-color:#020f3e;background-image:url("https://images.pexels.com/photos/1391374/pexels-photo-1391374.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");background-size:cover;position:relative;z-index:1}.card__title::after{content:'';display:block;position:absolute;top:0;bottom:0;left:0;right:0;background-color:rgba(0,0,0,0.5)}@media screen and (min-width: 768px){.card__title::after{display:none}}@media screen and (min-width: 768px){.card__title{background-image:none;background-color:#fff;border-top-right-radius:0;color:#333;max-width:400px;padding:50px 20px 0 20px;box-shadow:0 5px 5px rgba(0,0,0,0.1)}}.card__title hr{display:none}@media screen and (min-width: 768px){.card__title hr{display:block;max-width:50px;margin:15px 0 0 0;opacity:1;border-color:#F2A41E;border-style:solid}}.card__title h1,.card__title p{margin:0;position:relative;z-index:2}.card__title h1{font-weight:500}.card__title p{font-weight:200;font-size:0.9rem}.card__body{background-color:#fff;border-bottom-left-radius:5px;border-bottom-right-radius:5px;padding:20px}@media screen and (min-width: 768px){.card__body{padding:0;background-color:rgba(0,0,0,0)}}.card__body-image{display:none}@media screen and (min-width: 768px){.card__body-image{display:block;max-width:400px;max-height:330px;border-top-right-radius:5px;border-bottom-right-radius:5px;overflow:hidden;position:absolute;right:0;top:0}.card__body-image img{max-width:400px}}.card__text{padding:0;line-height:1.8rem}@media screen and (min-width: 768px){.card__text{background-color:#fff;box-shadow:0 5px 5px rgba(0,0,0,0.1);border-bottom-right-radius:5px;border-bottom-left-radius:5px;padding:20px;padding-right:30px;max-width:400px;position:relative;font-size:0.9rem;z-index:1}}.card__text strong+p{margin-top:0}
+.card {
+  height: 100%;
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+  border-radius: 5px;
+  margin-top: 0;
+  position: relative;
+  transition: all 0.5s ease;
+}
+@media screen and (min-width: 768px) {
+.card {
+      margin: 0;
+      max-width: 800px;
+}
+}
+.card::before {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 150px;
+    width: 5px;
+    background-color: #F2A41E;
+    top: -170px;
+    left: 52px;
+}
+.card--focused {
+    display: block;
+}
+.card--unfocused {
+    margin-top: 50px;
+}
+.card__image {
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: absolute;
+    left: 20px;
+    top: -30px;
+    border: 5px solid #FFFFFF;
+    z-index: 2;
+}
+.card__image img {
+      width: 80px;
+}
+.card__title {
+    padding: 50px 20px 20px 20px;
+    color: #FFFFFF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #020f3e;
+    background-image: url("https://images.pexels.com/photos/1391374/pexels-photo-1391374.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+.card__title::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+}
+@media screen and (min-width: 768px) {
+.card__title::after {
+          display: none;
+}
+}
+@media screen and (min-width: 768px) {
+.card__title {
+        background-image: none;
+        background-color: #FFFFFF;
+        border-top-right-radius: 0;
+        color: #333333;
+        max-width: 400px;
+        padding: 50px 20px 0 20px;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+}
+}
+.card__title hr {
+      display: none;
+}
+@media screen and (min-width: 768px) {
+.card__title hr {
+          display: block;
+          max-width: 50px;
+          margin: 15px 0 0 0;
+          opacity: 1;
+          border-color: #F2A41E;
+          border-style: solid;
+}
+}
+.card__title h1, .card__title p {
+      margin: 0;
+      position: relative;
+      z-index: 2;
+}
+.card__title h1 {
+      font-weight: 500;
+}
+.card__title p {
+      font-weight: 200;
+      font-size: 0.9rem;
+}
+.card__body {
+    background-color: #FFFFFF;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 20px;
+}
+@media screen and (min-width: 768px) {
+.card__body {
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0);
+}
+}
+.card__body-image {
+      display: none;
+}
+@media screen and (min-width: 768px) {
+.card__body-image {
+          display: block;
+          max-width: 400px;
+          max-height: 330px;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+          overflow: hidden;
+          position: absolute;
+          right: 0;
+          top: 0;
+}
+.card__body-image img {
+            max-width: 400px;
+}
+}
+.card__text {
+    padding: 0;
+    line-height: 1.8rem;
+}
+@media screen and (min-width: 768px) {
+.card__text {
+        background-color: #FFFFFF;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+        padding: 20px;
+        padding-right: 30px;
+        max-width: 400px;
+        position: relative;
+        font-size: 0.9rem;
+        z-index: 1;
+}
+}
+.card__text strong + p {
+      margin-top: 0;
+}
 
-*{box-sizing:border-box}.fade-leave,.fade-enter-to{opacity:1}.fade-leave div,.fade-leave::before,.fade-enter-to div,.fade-enter-to::before{margin-top:0}.fade-enter,.fade-leave-to{opacity:0}.fade-enter div,.fade-enter::before,.fade-leave-to div,.fade-leave-to::before{margin-top:-10px}.fade-enter-active,.fade-leave-active{transition:all 0.5s cubic-bezier(0.06, 0.38, 0.25, 1)}.fade-enter-active div,.fade-enter-active::before,.fade-leave-active div,.fade-leave-active::before{transition:all 0.5s cubic-bezier(0.06, 0.38, 0.25, 1)}.fade-enter-active div:nth-child(1),.fade-enter-active::before:nth-child(1),.fade-leave-active div:nth-child(1),.fade-leave-active::before:nth-child(1){transition-delay:0.1s}.fade-enter-active div:nth-child(2),.fade-enter-active::before:nth-child(2),.fade-leave-active div:nth-child(2),.fade-leave-active::before:nth-child(2){transition-delay:0.2s}.fade-enter-active div:nth-child(3),.fade-enter-active::before:nth-child(3),.fade-leave-active div:nth-child(3),.fade-leave-active::before:nth-child(3){transition-delay:0.3s}.app__container{min-height:100vh;overflow-x:hidden;position:relative}.app__background{background-color:#161616;height:400px;position:absolute;top:-40px;left:-20px;right:-20px;transform:rotate(-5deg)}@media screen and (min-width: 768px){.app__background{height:300px;margin-top:-60px}}body{font-family:'Open Sans', sans-serif;font-weight:300;font-size:16px;margin:0;height:100vh}@media screen and (min-width: 768px){body{background-color:#f7f7f7}}main{margin:20px}@media screen and (min-width: 1250px){main{max-width:800px;margin:20px auto}}header{width:100%;height:70px;position:relative}.photo__container{display:none;border-radius:50%;overflow:hidden;height:70px;width:70px;margin-top:20px;margin-left:20px;text-align:center;border:5px solid #fff}
+* {
+  box-sizing: border-box;
+}
+.fade-leave, .fade-enter-to {
+  opacity: 1;
+}
+.fade-leave div, .fade-leave::before, .fade-enter-to div, .fade-enter-to::before {
+    margin-top: 0;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
+.fade-enter div, .fade-enter::before, .fade-leave-to div, .fade-leave-to::before {
+    margin-top: -10px;
+}
+.fade-enter-active, .fade-leave-active {
+  transition: all 0.5s cubic-bezier(0.06, 0.38, 0.25, 1);
+}
+.fade-enter-active div, .fade-enter-active::before, .fade-leave-active div, .fade-leave-active::before {
+    transition: all 0.5s cubic-bezier(0.06, 0.38, 0.25, 1);
+}
+.fade-enter-active div:nth-child(1), .fade-enter-active::before:nth-child(1), .fade-leave-active div:nth-child(1), .fade-leave-active::before:nth-child(1) {
+      transition-delay: 0.1s;
+}
+.fade-enter-active div:nth-child(2), .fade-enter-active::before:nth-child(2), .fade-leave-active div:nth-child(2), .fade-leave-active::before:nth-child(2) {
+      transition-delay: 0.2s;
+}
+.fade-enter-active div:nth-child(3), .fade-enter-active::before:nth-child(3), .fade-leave-active div:nth-child(3), .fade-leave-active::before:nth-child(3) {
+      transition-delay: 0.3s;
+}
+.app__container {
+  min-height: 100vh;
+  overflow-x: hidden;
+  position: relative;
+}
+.app__background {
+  background-color: #161616;
+  height: 400px;
+  position: absolute;
+  top: -40px;
+  left: -20px;
+  right: -20px;
+  transform: rotate(-5deg);
+}
+@media screen and (min-width: 768px) {
+.app__background {
+      height: 300px;
+      margin-top: -60px;
+}
+}
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  margin: 0;
+  height: 100vh;
+}
+@media screen and (min-width: 768px) {
+body {
+      background-color: #f7f7f7;
+}
+}
+main {
+  margin: 20px;
+}
+@media screen and (min-width: 1250px) {
+main {
+      max-width: 800px;
+      margin: 20px auto;
+}
+}
+header {
+  width: 100%;
+  height: 70px;
+  position: relative;
+}
+.photo__container {
+  display: none;
+  border-radius: 50%;
+  overflow: hidden;
+  height: 70px;
+  width: 70px;
+  margin-top: 20px;
+  margin-left: 20px;
+  text-align: center;
+  border: 5px solid #FFFFFF;
+}
 
